# open-concept-lab

./: .gitignore  LICENSE  README.md
ai/: README.md
ai/persistent-memory-models/: .env.example  .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  DEMO_OUTPUT.md  Dockerfile  LICENSE  Makefile  PAPERS.md  PROJECT_SUMMARY.md  README.md  chatbot.py  demo.py  demo_complete.py  demo_conferences.py  demo_papers.py  demo_working.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_demo.py  quick_demo_auto.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  vision.md
ai/persistent-memory-models/.claude/: settings.json
ai/persistent-memory-models/.github/workflows/: ci.yml
ai/persistent-memory-models/data/: pride_and_prejudice_ch1.txt
ai/persistent-memory-models/docs/: BENCHMARKS.md  DEPENDENCIES.md  DEPLOYMENT.md  ENHANCED_LLM.md  GETTING_STARTED.md  MAKEFILE_COMMANDS.md  OLLAMA_INTEGRATION.md  PAPER.md  QUICKSTART.md
ai/persistent-memory-models/monitoring/: prometheus.yml
ai/persistent-memory-models/prompts/: 1.md
ai/persistent-memory-models/scripts/: README.md  demo_conferences.py  demo_papers.py  demo_simple.py  quick_demo_auto.py
ai/persistent-memory-models/tests/: conftest.py  test_arxiv_downloader.py  test_attention_retrieval.py  test_batch_processor.py  test_conference_connector.py  test_context_router.py  test_enhanced_components.py  test_enhanced_llm.py  test_fact_extractor.py  test_hierachical_attention.py  test_neural_router.py  test_query_cache.py  test_streaming_query.py
math/: README.md
(+1025 files in other folders)
